src/objects/EAI_Source__c.object
<CustomObject>
    <fields>
        <fullName>Complete_date__c</fullName>
        <label>Complete date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAI_Event_Code__c</fullName>
        <label>EAI Event Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <label>EID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type_Code__c</fullName>
        <label>Event Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Type_Code__c</fullName>
        <label>SR Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Code__c</fullName>
        <label>Target Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EAI Source</label>
    <nameField>
        <label>EAI Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EAL Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>